[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/player/assets/debug.tres" type="Material" id=1]
[ext_resource path="res://src/player/scripts/PlayerControl.gd" type="Script" id=2]
[ext_resource path="res://src/player/scripts/CameraControl.gd" type="Script" id=3]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="CapsuleMesh" id=2]

[node name="Player" type="KinematicBody"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
script = ExtResource( 2 )
gravity = 0.0

[node name="PlayerShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshPivot" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="MeshPivot"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="CSGBox" type="CSGBox" parent="MeshPivot"]
transform = Transform( 0.160224, 0, 0, 0, -3.59196e-08, 1, 0, -0.220473, -1.62921e-07, -0.0149188, 0.00708945, 0.962213 )
height = 0.739897
depth = 1.10994
material = ExtResource( 1 )

[node name="CSGBox2" type="CSGBox" parent="MeshPivot"]
transform = Transform( 0.160224, 0, 0, 0, -3.59196e-08, 1, 0, -0.220473, -1.62921e-07, -0.0149188, 0.0972878, -1.33919 )
height = 10.0556
depth = 0.235125
material = ExtResource( 1 )

[node name="CameraPivot" type="Spatial" parent="."]
process_priority = 1
script = ExtResource( 3 )

[node name="SpringArm" type="SpringArm" parent="CameraPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.30416, 1.02192, 0 )
spring_length = 7.0

[node name="Camera" type="Camera" parent="CameraPivot/SpringArm"]
current = true
fov = 90.0
far = 4096.0

[node name="LookRayCast" type="RayCast" parent="CameraPivot/SpringArm"]
enabled = true
cast_to = Vector3( 0, 0, -20 )
